--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".ExecList"
-            android:theme="@style/AppTheme"/>
-        <activity android:name=".Conversion"/>
+        <activity android:name=".AdminLogin" />
+        <activity
+            android:name=".ExecList"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".Conversion" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
