--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.eazifunds.efid">
+    package="com.softroniiks.digid">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".Digid"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".AdminLogin" />
         <activity
-            android:name=".ExecList"
-            android:theme="@style/AppTheme" />
-        <activity android:name=".Conversion" />
+            android:name=".views.ids.IdNavigationActivity"
+            android:exported="false"
+            android:label="@string/title_activity_id_navigation" />
+        <activity android:name=".views.authentication.login.LoginActivity" />
+        <activity
+            android:name=".views.authentication.signup.SignUpActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
